<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context="org.yyama.moneycounter.us.MainActivity" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TableRow
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:text="@string/kind" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center_horizontal"
                    android:text="@string/num" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="center_horizontal"
                    android:text="@string/sub_total" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img100dol"
                    style="@style/ImgStyle"
                    android:src="@drawable/dol100" />

                <TextView
                    android:id="@+id/Text100dol"
                    style="@style/LinkStyle"
                    android:text="@string/dol100" />

                <TextView
                    android:id="@+id/Num100dol"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum100dol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img50dol"
                    style="@style/ImgStyle"
                    android:src="@drawable/dol50" />

                <TextView
                    android:id="@+id/Text50dol"
                    style="@style/LinkStyle"
                    android:text="@string/dol50" />

                <TextView
                    android:id="@+id/Num50dol"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum50dol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img20dol"
                    style="@style/ImgStyle"
                    android:src="@drawable/dol20" />

                <TextView
                    android:id="@+id/Text20dol"
                    style="@style/LinkStyle"
                    android:text="@string/dol20" />

                <TextView
                    android:id="@+id/Num20dol"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum20dol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img10dol"
                    style="@style/ImgStyle"
                    android:src="@drawable/dol10" />

                <TextView
                    android:id="@+id/Text10dol"
                    style="@style/LinkStyle"
                    android:text="@string/dol10" />

                <TextView
                    android:id="@+id/Num10dol"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum10dol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img5dol"
                    style="@style/ImgStyle"
                    android:src="@drawable/dol5" />

                <TextView
                    android:id="@+id/Text5dol"
                    style="@style/LinkStyle"
                    android:text="@string/dol5" />

                <TextView
                    android:id="@+id/Num5dol"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum5dol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img2dol"
                    style="@style/ImgStyle"
                    android:src="@drawable/dol2" />

                <TextView
                    android:id="@+id/Text2dol"
                    style="@style/LinkStyle"
                    android:text="@string/dol2" />

                <TextView
                    android:id="@+id/Num2dol"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum2dol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img1dol"
                    style="@style/ImgStyle"
                    android:src="@drawable/dol1" />

                <TextView
                    android:id="@+id/Text1dol"
                    style="@style/LinkStyle"
                    android:text="@string/dol1" />

                <TextView
                    android:id="@+id/Num1dol"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum1dol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img100cent"
                    style="@style/ImgStyle"
                    android:src="@drawable/cent100" />

                <TextView
                    android:id="@+id/Text100cent"
                    style="@style/LinkStyleCent"
                    android:text="@string/cent100" />

                <TextView
                    android:id="@+id/Num100cent"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum100cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img50cent"
                    style="@style/ImgStyle"
                    android:src="@drawable/cent50" />

                <TextView
                    android:id="@+id/Text50cent"
                    style="@style/LinkStyleCent"
                    android:text="@string/cent50" />

                <TextView
                    android:id="@+id/Num50cent"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum50cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img25cent"
                    style="@style/ImgStyle"
                    android:src="@drawable/cent25" />

                <TextView
                    android:id="@+id/Text25cent"
                    style="@style/LinkStyleCent"
                    android:text="@string/cent25" />

                <TextView
                    android:id="@+id/Num25cent"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum25cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <!-- 10cent -->

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img10cent"
                    style="@style/ImgStyle"
                    android:src="@drawable/cent10" />

                <TextView
                    android:id="@+id/Text10cent"
                    style="@style/LinkStyleCent"
                    android:text="@string/cent10" />

                <TextView
                    android:id="@+id/Num10cent"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum10cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>
            <!-- 5cent -->

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img5cent"
                    style="@style/ImgStyle"
                    android:src="@drawable/cent5" />

                <TextView
                    android:id="@+id/Text5cent"
                    style="@style/LinkStyleCent"
                    android:text="@string/cent5" />

                <TextView
                    android:id="@+id/Num5cent"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum5cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <!-- 1cent -->

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img1cent"
                    style="@style/ImgStyle"
                    android:src="@drawable/cent1" />

                <TextView
                    android:id="@+id/Text1cent"
                    style="@style/LinkStyleCent"
                    android:text="@string/cent1" />

                <TextView
                    android:id="@+id/Num1cent"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum1cent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/TableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TableRow
            android:id="@+id/TableRow18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp" >

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:text="@string/all_clear" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/total"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/allSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="10"
                android:gravity="right"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/adSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>